# topo_synapse

./: .gitignore  README.md  __init__.py  errors.md  logs.md  pyproject.toml  tmp_diff_err.txt
baselines/: base.py  run_experiment.py
baselines/configs/: deep_hodge.yaml
baselines/experiments/: __init__.py
baselines/mlp/: __init__.py
baselines/ptv3/: __init__.py
baselines/snn/: model.py
baselines/src/: __init__.py
baselines/tcn/: model.py
common/: config.py  generators.py  layers.py  reporting.py  types.py
common/encoders/: geometric.py  scientific.py  topological_encoder.py
config/: __init__.py  default.yaml  publication.yaml
dataset/: download_sources.py
dev/: ablation_table.md  paper_discussion_topological_encoder.md  profile_deep_hodge_encoder.py  test_anchor_count_ablation.py  test_anchor_selection_ablation.py  test_deep_hodge_comparison.py  test_photonic_jld2.py  test_z4_router_ablation.py
evaluation/: __init__.py  ablations.py  rollout.py
logs/: deep_hodge_logs.md  ptv3_logs.md  snn_logs.md  tcn_and_mlp_logs.md
synapse/: __init__.py  runtime.py
synapse_arch/: deep_hodge.py  event_encoder.py  hodge_branch.py  model.py  saliency_normalizer.py  task_transformer.py  unified.py
synapse_core/: __init__.py  anchor_selector.py  audit.py  event.py  lift.py  proxy.py  topological_summary.py  topology.py
tests/: test_baseline_data_loader.py  test_deep_hodge_regression.py  test_history_aware_router.py  test_normalization_cache.py  test_topology_features.py  test_z4_topological_encoder.py
verification/: checks.py  stability.py
(+261 files in other folders)
