[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-z3"
version = "0.1.0"
description = "Topology-first SYNAPSE Z3 architecture for structured sequence representation learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NTH Research Team"}
]

dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pytorch-lightning>=2.1.0",
    "lmdb>=1.4.0",
    "tqdm>=4.66.0",
    "cvxpy>=1.4.0",
    "cvxpylayers>=0.1.6",
    "scikit-learn>=1.3.0",
    "gudhi>=3.8.0",
    "ripser>=0.6.4",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "osqp>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
full = [
    "transformers>=4.36.0",
    "opencv-python>=4.8.0",
    "gudhi>=3.8.0",
    "ripser>=0.6.4",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
